# OpenEnv

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: TEMP_pr_docs_preview.yml  auto-bump-version.yml  build_documentation.yml  build_pr_documentation.yml  deploy-hf-env.yml  docker-build.yml  manage-hf-collection.yml  openspiel_base_build.yml  package-ci.yml  publish-pypi.yml  publish-testpypi.yml  test.yml  upload_pr_documentation.yml
docs/: README.md
docs/source/: _toctree.yml  concepts.md  conf.py  contributing.md  environments.md  getting-started.md  index.md
docs/source/_static/: versions.json
envs/: README.md
envs/agent_world_model_env/: pyproject.toml
envs/atari_env/: client.py  pyproject.toml
envs/browsergym_env/: client.py  pyproject.toml
envs/browsergym_env/server/: Dockerfile  app.py  browsergym_environment.py
envs/calendar_env/: client.py
envs/carla_env/: pyproject.toml
envs/chat_env/: client.py  pyproject.toml
envs/chess_env/: client.py  pyproject.toml
envs/coding_env/: pyproject.toml
envs/coding_tools_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/coding_tools_env/server/: Dockerfile  __init__.py  app.py  coding_tools_env_environment.py  e2b_sandbox.py  gradio_ui.py  requirements.txt
envs/connect4_env/: client.py  pyproject.toml
envs/dipg_safety_env/: pyproject.toml
envs/dm_control_env/: client.py  pyproject.toml
envs/echo_env/: pyproject.toml
envs/finqa_env/: pyproject.toml
envs/finrl_env/: client.py  pyproject.toml
envs/git_env/: pyproject.toml
envs/grid_world_env/: pyproject.toml
envs/julia_env/: pyproject.toml
envs/jupyter_env/: .env.example  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/kernrl/: client.py  pyproject.toml
envs/maze_env/: client.py  pyproject.toml
envs/openapp_env/: client.py  example_usage.py  pyproject.toml
envs/opencode_env/: README.md  pyproject.toml
envs/openspiel_env/: README.md  client.py  pyproject.toml
envs/reasoning_gym_env/: client.py  pyproject.toml
envs/repl_env/: client.py  pyproject.toml
envs/snake_env/: client.py  pyproject.toml
envs/sophistry_bench_sprint_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/sophistry_bench_sprint_env/server/: Dockerfile  app.py  sophistry_bench_sprint_environment.py
envs/sumo_rl_env/: client.py  pyproject.toml
envs/tbench2_env/: client.py  pyproject.toml
envs/terminus_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/terminus_env/server/: Dockerfile  __init__.py  app.py  e2b_sandbox.py  gradio_ui.py  requirements.txt  terminus_env_environment.py
envs/textarena_env/: README.md  client.py  pyproject.toml
envs/unity_env/: README.md  client.py  pyproject.toml
envs/websearch_env/: client.py  pyproject.toml
envs/wildfire_env/: pyproject.toml
examples/: OpenEnv_Tutorial.ipynb  README.md  atari_simple.py  browsergym_trl_hf_sandbox.py  copilot_sdk_harness_eval.py  echo_mcp_demo.py  end_to_end_walkthrough.ipynb  evaluation_inspect.ipynb  grpo_training_loop.py  hf_sandbox_coding_env.py  local_coding_env.py  modal_echo_env.py  openapp_example.py  openapp_recording_demo.py  opencode_env_simple.py  openspiel_all_games.py  openspiel_simple.py  poker_inference.py  rubric_feedback_demo.py  rubrics.ipynb  sft_warmup.ipynb  sophistry_bench_sprint_grpo.py  textarena_simple.py  unity_simple.py
examples/awm_expert_in_the_loop/: EXPERT_ENHANCEMENT.md  README.md  awm_data.py  build_split.py  example_usage.py  expert.py  llm.py  policies.py  prompts.py  requirements.txt  rollout.py  run_awm_task.py  run_benchmark.py  task_select.py  test_rollout.py
examples/dipg/: dipg-rl.ipynb
examples/echo_on_agent_world_model/: README.md  awm.py  capture_episode.py  echo.py  requirements.txt  run_demo.py  test_echo_on_awm.py
examples/echo_world_model/: README.md  echo_loss.py  mini_terminal_env.py  requirements.txt  rollout.py  test_echo.py  train_echo.py  trajectory.py
rfcs/: 002-env-spec.md  004-rubrics.md  010-echo-env-token-world-model.md  README.md
scripts/: PR_REVIEW_BOT.md  pr-review-cron-wrapper.sh  pr_tracker.py  prepare_hf_deployment.sh
src/: __init__.py
src/openenv/cli/templates/openenv_env/: __init__.py  client.py  models.py  pyproject.toml
src/openenv/cli/templates/openenv_env/server/: Dockerfile  __ENV_NAME___environment.py  __init__.py  app.py  requirements.txt
tests/: test_line_endings.py
tests/core/: test_harness_collect.py  test_harness_runtime.py  test_llm_client.py  test_mode_selection.py  test_production_mode_mcp.py  test_production_mode_routes.py  test_route_config.py  test_serialization.py  test_simulation_mode_preserves_api.py  test_types_and_enums.py  test_web_interface.py  test_web_interface_layout.py
tests/envs/: test_auto_env.py  test_browsergym_harness.py  test_browsergym_observation_serialization.py  test_browsergym_task_switch.py  test_carla_environment.py  test_chess_environment.py  test_chess_rubric_migration.py  test_coding_env_integration.py  test_coding_tools_environment.py  test_connect4_env.py  test_discovery.py  test_grid_world.py  test_julia_env.py  test_jupyter_environment.py  test_opencode_env.py  test_openspiel_collect.py  test_openspiel_harness.py  test_python_codeact_reset.py  test_python_codeact_rewards.py  test_reasoning_gym_environment.py  test_repl_env.py  test_repl_env_reset_cache.py  test_sophistry_bench_sprint_environment.py  test_terminus_environment.py  test_unity_environment.py  test_websockets.py
tests/test_cli/: test_build.py  test_collect.py  test_fork.py  test_init.py  test_main.py  test_push.py  test_skills.py  test_validate.py
tests/test_core/: __init__.py  aca_integration_server.py  test_aca_provider.py  test_aca_provider_integration.py  test_daytona_provider.py  test_docker_base_image.py  test_generic_client.py  test_modal_provider.py  test_uv_provider.py
tutorial/: 01-environments.md
tutorial/examples/: OpenEnv_Tutorial.ipynb  wordle.py
(+146 files in other folders)
