# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-__ENV_NAME__"
version = "0.1.0"
description = "__ENV_TITLE_NAME__ environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv @ git+https://github.com/huggingface/OpenEnv.git",
    "openenv>=0.2.2",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m __ENV_NAME__.server.app
server = "__ENV_NAME__.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["__ENV_NAME__", "__ENV_NAME__.server"]
package-dir = { "__ENV_NAME__" = ".", "__ENV_NAME__.server" = "server" }